fix: play video button position on IE11

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1017,12 +1017,14 @@ input {
   position: absolute;
   left: calc( 50% - 42.5px);
   top: calc( 50% - 42.5px);
-  max-width: 85px;
-  max-height: 85px;
+  width: 85px;
+  height: 85px;
   border-radius: 50%;
   box-shadow: 0px 0px 20px rgba(255, 255, 255, 0);
   transition: box-shadow 0.5s; }
   .video__play-button:hover {
+    max-width: 85px;
+    max-height: 85px;
     border-radius: 50%;
     box-shadow: 0px 0px 20px rgba(255, 255, 255, 0.5); }
 
@@ -2482,8 +2484,10 @@ input {
   .control__description {
     min-width: 101%; }
   .video__play-button {
-    max-width: 37px;
-    max-height: 37px; }
+    width: 37px;
+    height: 37px;
+    left: calc( 50% - 18.5px);
+    top: calc( 50% - 18.5px); }
   .types .card__text {
     bottom: 11.40rem; }
   .team {
