--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -557,8 +557,10 @@
       min-width: 101%
   .video
     &__play-button
-      max-width: 37px
-      max-height: 37px
+      width: 37px
+      height: 37px
+      left: calc( 50% - 18.5px )
+      top: calc( 50% - 18.5px )
   .types
     & .card__text
       bottom: 11.40rem
