--- a/src/sass/templates/_control.sass
+++ b/src/sass/templates/_control.sass
@@ -108,11 +108,13 @@
     position: absolute
     left: calc( 50% - 42.5px )
     top: calc( 50% - 42.5px )
-    max-width: 85px
-    max-height: 85px
+    width: 85px
+    height: 85px
     border-radius: 50%
     box-shadow: 0px 0px 20px  rgba($light, 0)
     transition: box-shadow 0.5s 
     &:hover
+      max-width: 85px
+      max-height: 85px
       border-radius: 50%
       box-shadow: 0px 0px 20px  rgba($light, 0.5)
